
	* codegen.c (output_stmt): extracted output_source_reference and
	  also used for PERFORM UNTIL and VARYING
	* tree.c (cb_build_binary_op): add source reference to non-constant
	  expressions
	* tree.c (cb_build_perform_varying): add source reference to VARYING clause

2021-02-04  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.h: remove cb_listing_files ...

2021-02-03  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_stmt): dont' emit C labels for dummy sections,
	  don't emit C line directives for dummy sections/paragraphs

2021-02-02  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_stmt): emit cob_nop in C labels to fix
	  position in the generated assembler which was previously
	  in the COBOL statement above the label
	* codeoptim.def, codeoptim.c, typeck.c, cobc.c: optimized check for
	  linkage and based items (local check prevents function call),
	  similar optimized no-op

2021-01-25  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c: fixed context attribute of acu-extension POS 
	* parser.y, reserved.c, tree.h, cobc.h: added acu-extension
	  MOVE WITH CONVERSION as PENDING

2021-01-07  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_print_version): msgid change moving URLs to parameter per
	  gettext-guidelines

2021-01-05  Simon Sobisch <simonsobisch@gnu.org>

	* field.c (cb_build_full_field_reference): fix bug #

2021-01-02  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.h, cobc.c: removed unused cb_exception->explicit_enable_val

2020-12-30  Simon Sobisch <simonsobisch@gnu.org>

	* flag.def, cobc.c: change cb_flag_notrunc to cb_flag_trunc to "fix"
	  -fno-fnotrunc with backward-compatibilty handling

2020-12-23  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_initialize_compound): special handling for OCCURS 1
	* codegen.c (output_report_sum_control_field): adjusted for literal source

2020-12-21  Simon Sobisch <simonsobisch@gnu.org>

	* field.c, pplex.l, tree.c, typeck.c: fixed warning option querying enum